--- a/index.html
+++ b/index.html
@@ -1,32 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Valentine</title>
+  <meta charset="UTF-8">
+  <title>Will You Be My Valentine?</title>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
-    <div class="container">
-        <div class="Mainprompt">
-            <img class="image" src="images/catflower.jpg"></img>
-            <h1 class="hh" id="name">Hey beautiful!</h1>
-            <p class="pp" id="question">Will you be my Valentine?</p>
-            <div class="buttons">
-                <button id="no-button" onclick="showMessage('No')">No</button>
-                <button onclick="showMessage('Yes')" id="yesButton">Yes</button>
-            </div>
-            <div class="hidden-message" id="no-message">
-                <p>Nice try, but you can't escape that easily!</p>
-            </div>
-            <div class="hidden-message" id="yes-message">
-                <p>Yeees! See you on the 14th, Princess.</p>
-            </div>
-        </div>
-    </div>
-    <script src="script.js"></script>
-</body>
+  <div class="container">
+    <h1 class="hh">Hey [Her Name] 💖</h1>
+    <p class="pp">Will you be my Valentine?</p>
 
+    <div class="buttons">
+      <button id="yes-button">Yes 😍</button>
+      <button id="no-button">No 😅</button>
+    </div>
+
+    <div class="hidden-message" id="final-message">
+      💌 Yay! I'm so happy! Can't wait to celebrate our love ❤️
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
 </html>
