--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <title>Will You Be My Valentine?</title>
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+  
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="container">
-    <h1 class="hh">Hey Kayal! 💖</h1>
+    <h1 class="hh">Hey [Her Name] 💖</h1>
     <p class="pp">Will you be my Valentine?</p>
 
     <div class="buttons">
