--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <h1 class="hh">Hey [Her Name] 💖</h1>
+    <h1 class="hh">Hey Kayal ! 💖</h1>
     <p class="pp">Will you be my Valentine?</p>
 
     <div class="buttons">
