--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="hidden-message" id="final-message">
-      💌 Yay! I'm so happy! Can't wait to celebrate our love ❤️
+      💌 Yay! ❤️
     </div>
   </div>
 
